# trab-si

./: main.py  pyproject.toml
data/: cloropeth_data.csv  depara.csv  dict_df.csv
