[tool.poetry]
name = "cnes"
version = "0.1.0"
description = ""
authors = ["llbs at cin.ufpe.br"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.27.0"
numpy = "^1.26.0"
pandas = "^2.1.1"
plotly = "^5.17.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
